11 April 2007
+ Removed redundant class calls in init.php


6 April 2007
+ Changed default username size to 3

5 April 2007
+ Updated translation functions.

4 April 2007
+ Changed form names on login templates since both have ids and may
  appear on same page.
+ Removed return by reference from Current_User::getUserObj

2 April 2007
+ Changed popuppermission to echo error instead of using goback
  function.
+ Fixed error code call in Permissions.php. Needed to call core code.
+ Added German translation files

Version 2.3.2
------------------------------------------------------------------

13 March 2007
+ Found template typo that broke IE login.
+ Updated file: templates/user_main.tpl

7 March 2007
+ Removed fake French translation.
+ Ordered permissions alphabetically (FR #1665183).

5 March 2007
+ Changed control panel icon
+ Added error check to login.
+ isUser will now always return false if passed a zero id.
+ Added new function requireLogin that forwards a user to the login
  screen


Version 2.3.1
-------------------------------------------------------------------
23 February 2007
+ Added ability for user to choose their preferred editor.
+ Updated files: templates/my_page/user_setting.tpl


Version 2.3.0
-------------------------------------------------------------------
22 February 2007
+ Removed redundant translate functions.
+ Removed addStyle call from my_page.php (Bug #1665576)
+ Removed unneeded content variable.

13 February 2007
+ Added translate function calls in classes and my_page.php
+ my_page hides translation option if language defines disable selection
+ Raised core dependency.

12 January 2007
+ Added a unrestricted only parameter to Current_User's allow and
  authorize functions

10 January 2007
+ Dropped references from some constructors
+ Added error check to setPermissions function: won't accept empty
  group id
+ tidied (lower cased constants)
+ Changed id default to zero.

9 January 2006