@@ -6,5 +6,6 @@
 $settings = array('default_authorization' => 1,
                   'new_user_method'       => 2,
                   'user_menu'             => 'top.tpl',
-                  'graphic_confirm'       => 0);
+                  'graphic_confirm'       => 0,
+                  'allow_remember'        => 1);
 ?>
